# prompt-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: planted_instructions.py
docs/: detailed-guide.md  github-copilot.md
examples/: README.md  _realprovider.py  _shared.py
examples/cost_compare/: README.md  prompt.md  run.py
examples/interaction_effects/: README.md  run.py
examples/local_inference/: README.md  prompt.md  run.py
examples/optimize_before_after/: README.md  run.py
examples/order_operations_agent/: README.md  instructions.md  run.py
examples/real_world/: README.md  outputs.md  prompt.md  run.py
examples/system_prompt_cleanup/: README.md  embedding.json  run.py  system_prompt.txt
examples/tool_routing_bug/: README.md  run.py
src/promptlens/: __init__.py
src/promptlens/adapters/: __init__.py  agent.py  anthropic.py  bedrock.py  copilot.py  echo.py  gemini.py  grok.py  models.py  openai.py  openai_compat.py
src/promptlens/cli/: banner.py  factories.py  main.py  render.py  wizard.py
src/promptlens/core/: __init__.py  base.py  drilldown.py  harness.py  pricing.py  result.py  tools.py
src/promptlens/maskers/: __init__.py  text.py
src/promptlens/mutators/: __init__.py  text.py
src/promptlens/optimizers/: __init__.py  text.py
src/promptlens/reporters/: __init__.py  synopsis.py
src/promptlens/samplers/: __init__.py  leave_one_out.py  random_coalition.py
src/promptlens/scorers/: __init__.py  _tool_calls.py  composite.py  embeddings.py  logprob.py  text.py  tool_accuracy.py  trajectory.py
src/promptlens/scorers/embeddings/: __init__.py  huggingface.py  local.py  openai.py
src/promptlens/segmenters/: __init__.py  text.py  tools.py
tests/unit/: test_agent_adapter.py  test_anthropic_adapter.py  test_attribution_math.py  test_attribution_semantics.py  test_benchmark.py  test_cli.py  test_cli_factories.py  test_concurrency.py  test_copilot_adapter.py  test_drilldown.py  test_examples.py  test_gemini_adapter.py  test_grok_adapter.py  test_harness.py  test_html_report.py  test_maskers.py  test_model_capabilities.py  test_mutators.py  test_openai_adapter.py  test_optimizers.py  test_pricing.py  test_render_safety.py  test_samplers.py  test_scorers.py  test_segmenters.py  test_synopsis.py  test_tools.py  test_trajectory_scorer.py
