[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "promptlens"
version = "0.1.0"
description = "Black-box prompt attribution for closed and open LLM APIs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "promptlens contributors" }]
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.54", "tiktoken>=0.7"]
bedrock = ["boto3>=1.35"]
copilot = ["github-copilot-sdk>=1.0"]
shap = ["shap>=0.46"]
dev = ["pytest>=8.2", "ruff>=0.6", "mypy>=1.11"]
all = [
  "anthropic>=0.39",
  "openai>=1.54",
  "tiktoken>=0.7",
  "boto3>=1.35",
  "github-copilot-sdk>=1.0",
  "shap>=0.46",
]

[project.scripts]
promptlens = "promptlens.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/promptlens"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["promptlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: requires live provider credentials"]

[[tool.mypy.overrides]]
module = ["anthropic", "boto3", "openai", "copilot", "copilot.*"]
ignore_missing_imports = true
